# hie-viz

./: ChangeLog.md  Makefile  README.md  hie-viz.cabal  hie.yaml
.github/workflows/: haskell-ci.yml
client/src/: Main.elm
hie-viz/: Main.hs
src/: HieViz.hs  Settings.hs
src/Data/: Declaration.hs
src/HieViz/: Graphviz.hs  Server.hs
test/: Spec.hs
